--- a/index.html
+++ b/index.html
@@ -3,18 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>route-reward-hub</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>RouteSync</title>
+    <meta name="description" content="Smart route optimization and reward system" />
 
-    <meta property="og:title" content="route-reward-hub" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="RouteSync" />
+    <meta property="og:description" content="Smart route optimization and reward system" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
